// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PermissionsSummary should render correctly 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#ffffff",
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderTopLeftRadius": 20,
        "borderTopRightRadius": 20,
        "height": undefined,
        "justifyContent": "flex-start",
        "minHeight": 200,
        "paddingTop": 8,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 16,
            }
          }
        />
        <View
          style={
            [
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              false,
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 10,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignContent": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 27,
                    "height": 54,
                    "justifyContent": "center",
                    "width": 54,
                  },
                  {
                    "borderRadius": 16,
                    "height": 32,
                    "width": 32,
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#141618",
                      "fontFamily": "EuclidCircularB-Regular",
                      "fontSize": 24,
                      "fontWeight": "400",
                      "textAlign": "center",
                      "textTransform": "uppercase",
                    },
                    undefined,
                  ]
                }
              >
                a
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
              "flex": 1,
              "paddingRight": 16,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignSelf": "center",
            "marginBottom": 16,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 8,
          }
        }
        testID="permission-network-permissions-container"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#141618",
              "fontFamily": "EuclidCircularB-Bold",
              "fontSize": 16,
              "fontWeight": "700",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          app.uniswap.org has approval to:
        </Text>
      </View>
      <TouchableOpacity
        onPress={[Function]}
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 12,
              "marginHorizontal": 24,
              "marginTop": 8,
            }
          }
          testID="permission-summary-container"
        >
          <View
            style={
              {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "backgroundColor": "#0000001A",
                "borderRadius": 16,
                "height": 32,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 32,
              }
            }
          >
            <SvgMock
              color="#6a737d"
              height={20}
              name="Wallet"
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              width={20}
            />
          </View>
          <View
            style={
              {
                "flex": 1,
                "marginLeft": 12,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#141618",
                  "fontFamily": "EuclidCircularB-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              See your accounts and suggest transactions
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "gap": 2,
                }
              }
            >
              <View
                style={
                  {
                    "maxWidth": "75%",
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    {
                      "color": "#141618",
                      "fontFamily": "EuclidCircularB-Regular",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                  testID="permission-summary-account-text"
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#141618",
                        "fontFamily": "EuclidCircularB-Regular",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 20,
                      }
                    }
                  >
                    Connected to  Account 2
                  </Text>
                </Text>
              </View>
              <View
                style={
                  {
                    "flexGrow": 1,
                    "marginLeft": 2,
                    "minWidth": "25%",
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 16,
                      "overflow": "hidden",
                      "width": 16,
                    }
                  }
                >
                  <View
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        {
                          "backgroundColor": "#FC4800",
                          "borderRadius": 8,
                          "height": 16,
                          "width": 16,
                        },
                        undefined,
                      ]
                    }
                  >
                    <RNSVGSvgView
                      bbHeight={16}
                      bbWidth={16}
                      focusable={false}
                      height={16}
                      style={
                        [
                          {
                            "backgroundColor": "transparent",
                            "borderWidth": 0,
                          },
                          {
                            "flex": 0,
                            "height": 16,
                            "width": 16,
                          },
                        ]
                      }
                      width={16}
                    >
                      <RNSVGGroup
                        fill={
                          {
                            "payload": 4278190080,
                            "type": 0,
                          }
                        }
                      >
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4278291575,
                              "type": 0,
                            }
                          }
                          height={16}
                          matrix={
                            [
                              -0.41310442982454204,
                              -0.910683660806177,
                              0.910683660806177,
                              -0.41310442982454204,
                              4.404802817153955,
                              20.16808402411075,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={16}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4278410587,
                              "type": 0,
                            }
                          }
                          height={16}
                          matrix={
                            [
                              0.903335292863301,
                              -0.42893513340314526,
                              0.42893513340314526,
                              0.903335292863301,
                              -9.297010789302583,
                              3.362634662066926,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={16}
                          x={0}
                          y={0}
                        />
                        <RNSVGRect
                          fill={
                            {
                              "payload": 4294382337,
                              "type": 0,
                            }
                          }
                          height={16}
                          matrix={
                            [
                              -0.6921431738704069,
                              -0.7217602280983622,
                              0.7217602280983622,
                              -0.6921431738704069,
                              -6.169639630140347,
                              15.20799235933167,
                            ]
                          }
                          propList={
                            [
                              "fill",
                            ]
                          }
                          width={16}
                          x={0}
                          y={0}
                        />
                      </RNSVGGroup>
                    </RNSVGSvgView>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            testID="connection-details-button"
          >
            <SvgMock
              color="#141618"
              height={20}
              name="ArrowRight"
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              width={20}
            />
          </View>
        </View>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        testID="navigate_to_edit_networks_permissions_button"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 16,
              "marginHorizontal": 24,
              "marginTop": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "backgroundColor": "#0000001A",
                "borderRadius": 16,
                "height": 32,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 32,
              }
            }
          >
            <SvgMock
              color="#6a737d"
              height={20}
              name="Data"
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              width={20}
            />
          </View>
          <View
            style={
              {
                "flex": 1,
                "marginLeft": 12,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#141618",
                  "fontFamily": "EuclidCircularB-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Use your enabled networks
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "marginRight": 4,
                    "maxWidth": "75%",
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    {
                      "color": "#141618",
                      "fontFamily": "EuclidCircularB-Regular",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#141618",
                        "fontFamily": "EuclidCircularB-Regular",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 20,
                      }
                    }
                  >
                    0 networks connected 
                  </Text>
                </Text>
              </View>
              <View
                style={
                  {
                    "flexGrow": 1,
                    "marginLeft": 2,
                    "minWidth": "25%",
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                    }
                  }
                />
              </View>
            </View>
          </View>
          <View
            testID="connection-details-button"
          >
            <SvgMock
              color="#141618"
              height={20}
              name="ArrowRight"
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              width={20}
            />
          </View>
        </View>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "marginTop": 8,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "marginHorizontal": 24,
            "marginTop": 8,
          }
        }
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderColor": "#d73847",
              "borderRadius": 24,
              "borderWidth": 1,
              "flex": 1,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "paddingHorizontal": 16,
            }
          }
          testID="disconnect_all"
        >
          <SvgMock
            color="#d73847"
            height={16}
            name="Logout"
            style={
              {
                "height": 16,
                "marginRight": 8,
                "width": 16,
              }
            }
            width={16}
          />
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#d73847",
                "fontFamily": "EuclidCircularB-Medium",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            Disconnect all
          </Text>
        </TouchableOpacity>
      </View>
      <View
        style={
          {
            "flex": 0,
            "flexDirection": "row",
            "marginTop": 8,
            "paddingHorizontal": 24,
          }
        }
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            [
              [
                {
                  "borderRadius": 100,
                  "justifyContent": "center",
                  "padding": 15,
                },
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#6a737d",
                  "borderWidth": 1,
                },
                [
                  {
                    "flex": 1,
                  },
                  {
                    "marginRight": 8,
                  },
                ],
              ],
              null,
            ]
          }
          testID="cancel-button"
        >
          <Text
            style={
              [
                {
                  "color": "#007aff",
                  "fontSize": 17,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
                null,
                [
                  {
                    "fontFamily": "EuclidCircularB-Bold",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "textAlign": "center",
                  },
                  {
                    "color": "#6a737d",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            Cancel
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            [
              [
                {
                  "borderRadius": 100,
                  "justifyContent": "center",
                  "padding": 15,
                },
                {
                  "backgroundColor": "#0376c9",
                  "minHeight": 50,
                },
                [
                  {
                    "flex": 1,
                  },
                  {
                    "marginLeft": 8,
                  },
                ],
              ],
              null,
            ]
          }
          testID="connect-button"
        >
          <Text
            style={
              [
                {
                  "color": "#007aff",
                  "fontSize": 17,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
                null,
                [
                  {
                    "fontFamily": "EuclidCircularB-Bold",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "textAlign": "center",
                  },
                  {
                    "color": "#ffffff",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            Connect
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`PermissionsSummary should render correctly for network switch 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#ffffff",
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderTopLeftRadius": 20,
        "borderTopRightRadius": 20,
        "height": undefined,
        "justifyContent": "flex-start",
        "minHeight": 200,
        "paddingTop": 8,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingLeft": 16,
            }
          }
        />
        <View
          style={
            [
              {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
              },
              false,
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "borderRadius": 10,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignContent": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 27,
                    "height": 54,
                    "justifyContent": "center",
                    "width": 54,
                  },
                  {
                    "borderRadius": 16,
                    "height": 32,
                    "width": 32,
                  },
                ]
              }
            >
              <Text
                style={
                  [
                    {
                      "color": "#141618",
                      "fontFamily": "EuclidCircularB-Regular",
                      "fontSize": 24,
                      "fontWeight": "400",
                      "textAlign": "center",
                      "textTransform": "uppercase",
                    },
                    undefined,
                  ]
                }
              >
                a
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
              "flex": 1,
              "paddingRight": 16,
            }
          }
        />
      </View>
      <View
        style={
          {
            "alignSelf": "center",
            "marginBottom": 16,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 8,
          }
        }
        testID="permission-network-permissions-container"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#141618",
              "fontFamily": "EuclidCircularB-Bold",
              "fontSize": 16,
              "fontWeight": "700",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          app.uniswap.org wants to:
        </Text>
      </View>
      <TouchableOpacity
        onPress={[Function]}
        testID="navigate_to_edit_networks_permissions_button"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "marginBottom": 16,
              "marginHorizontal": 24,
              "marginTop": 8,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "alignSelf": "flex-start",
                "backgroundColor": "#0000001A",
                "borderRadius": 16,
                "height": 32,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 32,
              }
            }
          >
            <SvgMock
              color="#6a737d"
              height={20}
              name="Data"
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              width={20}
            />
          </View>
          <View
            style={
              {
                "flex": 1,
                "marginLeft": 12,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#141618",
                  "fontFamily": "EuclidCircularB-Regular",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 22,
                }
              }
            >
              Use your enabled networks
            </Text>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "marginRight": 4,
                    "maxWidth": "75%",
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    {
                      "color": "#141618",
                      "fontFamily": "EuclidCircularB-Regular",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 22,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#141618",
                        "fontFamily": "EuclidCircularB-Regular",
                        "fontSize": 12,
                        "fontWeight": "400",
                        "letterSpacing": 0,
                        "lineHeight": 20,
                      }
                    }
                  >
                    Requesting for 
                  </Text>
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#141618",
                        "fontFamily": "EuclidCircularB-Medium",
                        "fontSize": 12,
                        "fontWeight": "500",
                        "letterSpacing": 0,
                        "lineHeight": 20,
                      }
                    }
                  >
                    Sepolia
                  </Text>
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderRadius": 8,
                    "height": 16,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "width": 16,
                  }
                }
              >
                <Image
                  onError={[Function]}
                  resizeMode="contain"
                  source={1}
                  style={
                    {
                      "height": 16,
                      "width": 16,
                    }
                  }
                  testID="network-avatar-image"
                />
              </View>
            </View>
          </View>
        </View>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "marginTop": 8,
        }
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "marginHorizontal": 24,
            "marginTop": 8,
          }
        }
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={1}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
          style={
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderColor": "#d73847",
              "borderRadius": 24,
              "borderWidth": 1,
              "flex": 1,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "paddingHorizontal": 16,
            }
          }
          testID="disconnect_all"
        >
          <SvgMock
            color="#d73847"
            height={16}
            name="Logout"
            style={
              {
                "height": 16,
                "marginRight": 8,
                "width": 16,
              }
            }
            width={16}
          />
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#d73847",
                "fontFamily": "EuclidCircularB-Medium",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            Disconnect all
          </Text>
        </TouchableOpacity>
      </View>
      <View
        style={
          {
            "flex": 0,
            "flexDirection": "row",
            "marginTop": 8,
            "paddingHorizontal": 24,
          }
        }
      >
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            [
              [
                {
                  "borderRadius": 100,
                  "justifyContent": "center",
                  "padding": 15,
                },
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#6a737d",
                  "borderWidth": 1,
                },
                [
                  {
                    "flex": 1,
                  },
                  {
                    "marginRight": 8,
                  },
                ],
              ],
              null,
            ]
          }
          testID="cancel-button"
        >
          <Text
            style={
              [
                {
                  "color": "#007aff",
                  "fontSize": 17,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
                null,
                [
                  {
                    "fontFamily": "EuclidCircularB-Bold",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "textAlign": "center",
                  },
                  {
                    "color": "#6a737d",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            Cancel
          </Text>
        </TouchableOpacity>
        <TouchableOpacity
          accessibilityRole="button"
          accessible={true}
          activeOpacity={0.2}
          onPress={[Function]}
          style={
            [
              [
                {
                  "borderRadius": 100,
                  "justifyContent": "center",
                  "padding": 15,
                },
                {
                  "backgroundColor": "#0376c9",
                  "minHeight": 50,
                },
                [
                  {
                    "flex": 1,
                  },
                  {
                    "marginLeft": 8,
                  },
                ],
              ],
              null,
            ]
          }
          testID="connect-button"
        >
          <Text
            style={
              [
                {
                  "color": "#007aff",
                  "fontSize": 17,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
                null,
                [
                  {
                    "fontFamily": "EuclidCircularB-Bold",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "textAlign": "center",
                  },
                  {
                    "color": "#ffffff",
                  },
                  undefined,
                ],
                null,
              ]
            }
          >
            Confirm
          </Text>
        </TouchableOpacity>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
